--- a/minerva_frontend/web/index.html
+++ b/minerva_frontend/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>minerva_frontend</title>
+  <title>Minerva System</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
